# andys-kernel

./: .gitignore  Cargo.toml  Makefile  README.org  build.rs  manifest.scm  qemu_debug.sh  run.sh  run_debug.sh
.cargo/: config.toml
assembly/: entry.S  symbols.S
crates/bootloader/: Cargo.toml
crates/bootloader/src/: elf_mapper.rs  frame_allocator.rs  main.rs  make_stack.rs  read_file.rs
crates/kernel/: build.rs
crates/kernel/src/: uart.rs
crates/kernel/src/arch/x86_64/: entry.asm
parts/bootloader/: Cargo.toml
parts/bootloader/src/: main.rs
parts/kernel/: Cargo.toml  build.rs
parts/kernel/src/arch/: mod.rs
parts/kernel/src/arch/riscv64/: csr_stuff.rs  entry.rs  linker.ld  mod.rs
parts/kernel/src/arch/x86_64/: entry.asm
scripts/: qemu_debug.sh  run_debug.sh
scripts/old/: qemu_debug.sh  run_debug.sh
scripts/x86_64/: build.sh  run.sh
src/: heap_alloc.rs  main.rs
src/arch/: mod.rs
src/arch/riscv/: entry.asm  interrupt.rs  trap.rs
src/arch/riscv/mmu/: riscv.rs
src/arch/riscv64/: entry.asm  linker.ld  mod.rs
src/arch/riscv64/mmu/: mod.rs  riscv.rs
src/arch/x86_64/: entry.asm  linker.ld  mod.rs
