[package]
name = "bootloader"
version = "0.1.0"
edition = "2021"
authors = ["陈功 <chengong456@qq.com>"]

[[bin]]
  name = "bootloader"
  test = false
  bench = false

[dependencies]
uefi = { version = "0.27.0", features = ["alloc"] }
uefi-services = { version = "0.24.0", default-features = false }
xmas-elf = "0.9.1"
x86_64 = { version = "0.15.1", default-features = false, features = ["instructions"] }
